log
Compiling .pio\build\esp32dev\src\main.c.o
src/main.c:51:20: error: variably modified 'MIC_BUFFER' at file scope
   51 |     static int16_t MIC_BUFFER[MIC_BUFFER_SIZE]; // 10kB * sizeof(int_16)<2>  ==  20kB
      |                    ^~~~~~~~~~
*** [.pio\build\esp32dev\src\main.c.o] Error 1